nj.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;newsandmedia",
  "char_count": 6696,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.62,
  "homepage_snapshot_redirected_domain": "nj.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060403150124id_/http://www.nj.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060403150124id_/http%3A//nj.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nj.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615105220id_/http%3A//www.nj.com/privacypolicy",
  "policy_title": "NJ.com: Privacy Policy",
  "policy_url": "nj.com/privacypolicy",
  "sha1": "d71c28025c9e41af5ad2f443b60efd9c6b57f708",
  "simhash": 968784776415322758,
  "simhash_updated": false,
  "site_hostname": "nj.com",
  "site_url": "http://nj.com",
  "smog": 14.07,
  "strict_updated": true,
  "timestamp": "20060615105220",
  "word_count": 1122,
  "year": 2006
}

--- a/n/nj/nj./nj.com.html
+++ b/n/nj/nj./nj.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nj.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215061501id_/http%3A//www.nj.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nj.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615105220id_/http%3A//www.nj.com/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>NJ.com: Privacy Policy</title>
@@ -9,6 +9,9 @@
  </script>
  
 <script language="javascript" src="http://www.nj.com/dhtml/stats/track/vsfunctions.js"></script>
+<script language="javascript" src="http://www.nj.com/dhtml/stats/track/vssetup.js"></script>
+<script language="JavaScript">var tcdacmd="dt";</script>
+<script src="http://an.tacoda.net/an/12288/slf.js" language="JavaScript"></script>
 </head>
 
 <body bgcolor="#FFFFFF" link="#0033CC" vlink="#02618A">
@@ -17,11 +20,10 @@
 //configuration
 OAS_url = 'http://ads.nj.com/RealMedia/ads/';
 OAS_sitepage = 'www.nj.com/privacypolicy/index.ssf';
-OAS_listpos = 'BannerTop,Popup,SponsorLeft,SponsorRight,Tile1';
+OAS_listpos = 'BannerTop,Popup,SponsorLeft,SponsorRight,Tile1,SkyScraper';
 OAS_query = 'NULL';
 OAS_target = '_top'; //end of configuration
 </script>
-
 <script language="JavaScript">
 <!-- -->
 OAS_version = 10;
@@ -41,7 +43,7 @@ if (navigator.userAgent.indexOf('Mozilla/3') != -1 || navigator.userAgent.indexO
 if (OAS_version >= 11)
   document.write('<SCRIPT LANGUAGE=JavaScript1.1 SR' + 'C="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"><\/SCRIPT>');
 //-->
-</script><script language="JavaScript1.1" src="http://ads.nj.com/RealMedia/ads/adstream_mjx.ads/www.nj.com/privacypolicy/index.ssf/1212198435@BannerTop,Popup,SponsorLeft,SponsorRight,Tile1?NULL"></script>
+</script><script language="JavaScript1.1" src="http://ads.nj.com/RealMedia/ads/adstream_mjx.ads/www.nj.com/privacypolicy/index.ssf/1052282992@BannerTop,Popup,SponsorLeft,SponsorRight,Tile1,SkyScraper?NULL"></script>
 <script language="JavaScript">
 <!-- -->
 document.write('');
@@ -107,12 +109,12 @@ function formValid(theForm) {
 function chooseExclude(theForm) {
   var xref = theForm.xref.options[theForm.xref.selectedIndex].value;
 var category = theForm.elements[1].options[theForm.elements[1].selectedIndex].value;
-if ((xref == 3 || xref == 1) && category == "") {
+if (xref == 3 && category == "") {
 theForm.elements[1].options[theForm.elements[1].selectedIndex].value = "-x_category";
 }
 }
 </script>
-<td width="1"><form action="/search/index.ssf" onsubmit="return formValid()" name="sform" method="get"><input type="hidden" name="sconfig" value="njo"><input type="hidden" name="xpath.category_letter" value=""><input type="hidden" name="xpath.pubdate" value="12/15/05 12/14/05 12/13/05 12/12/05 12/11/05 12/10/05 12/09/05 12/08/05 12/07/05 12/06/05 12/05/05 12/04/05 12/03/05 12/02/05"><input type="hidden" size="2" name="count" value="20"><img src="http://www.nj.com/images/spacer.gif" width="1" height="1"></form></td>
+<td width="1"><form action="/search/index.ssf" onsubmit="return formValid()" name="sform" method="get"><input type="hidden" name="sconfig" value="njo"><input type="hidden" name="xpath.category_letter" value=""><input type="hidden" name="xpath.pubdate" value="06/15/06 06/14/06 06/13/06 06/12/06 06/11/06 06/10/06 06/09/06 06/08/06 06/07/06 06/06/06 06/05/06 06/04/06 06/03/06 06/02/06"><input type="hidden" size="2" name="count" value="20"><img src="http://www.nj.com/images/spacer.gif" width="1" height="1"></form></td>
 <td width="85" align="right"><img src="http://www.nj.com/images/toprail/arrow.gif" width="14" height="10">&nbsp;<font face="arial,sans-serif" size="2" color="#FBBB7A"><a href="/search/"><font color="#FABA7A"><b>SEARCH</b></font></a></font><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" hspace="2"></td>
 <td width="145"><select name="xref">
 <option value="">Pick Newspaper
@@ -126,6 +128,10 @@ theForm.elements[1].options[theForm.elements[1].selectedIndex].value = "-x_categ
 </option><option value="12">Hunterdon Democrat
 </option><option value="13">Reporter, Somerset
 </option><option value="15">The Warren Reporter
+</option><option value="18">Independent Press
+</option><option value="17">Suburban News
+</option><option value="17">Cranford Chronicle
+</option><option value="17">Record-Press
 </option></select></td>
 <td width="140" align="center"><input type="text" name="xpath.any" maxlength="30" size="16" value="Enter Keyword(s)" onfocus="if ( value == 'Enter Keyword(s)' ) { value = ''; }" onblur="if ( value == '' ) { value = 'Enter Keyword(s)'; }" style="width: 136px"></td>
 <td width="50"><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" hspace="1"><input type="image" src="http://www.nj.com/images/toprail/go_orange.gif" width="35" height="14" border="0"></td>
@@ -207,7 +213,7 @@ OAS_AD('SponsorRight');
 </tbody></table></td>
 <td width="10"><img src="/images/spacer.gif" width="10" height="1"></td>
 <td width="195" bgcolor="#EAEAEA" align="center">
-<img src="/images/spacer.gif" width="1" height="2" vspace="41" hspace="50"><br>
+<img src="/images/spacer.gif" width="1" height="2" vspace="57" hspace="50"><br>
 <table width="190" border="0" cellspacing="2" cellpadding="3">
 <tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font face="Arial,sans-serif" size="1">» <a href="http://collegeanduniversity.net/nj_com/?affid=183" target="_blank"><font color="#0033CC">Search for Colleges and Schools</font></a><br>
 <font face="Arial,sans-serif" size="1">» <a href="/funguide/"><font color="#0033CC">Fun Guide: Things to do in NJ</font></a><br>
@@ -225,6 +231,14 @@ OAS_AD('Tile1');
 //-->
 </script>
 <!--- OAS AD 'Tile1' end -->
+<img src="/images/spacer.gif" width="2" height="1" hspace="94" vspace="5"><br>
+<!--- OAS AD 'SkyScraper' begin -->
+<script language="JavaScript">
+<!--
+OAS_AD('SkyScraper');
+//-->
+</script>
+<!--- OAS AD 'SkyScraper' end -->
 
  		<img src="/images/spacer.gif" height="1" width="190" vspace="5"><br>
  
@@ -250,7 +264,7 @@ OAS_AD('Tile1');
 <td width="5">&nbsp;</td>
 <td align="center" width="396"><font face="arial,sans-serif" size="2"><b>Special Home Delivery Offers!</b><br>
 <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/SubLedgeClick.html/" target="_blank">The Star-Ledger</a> | <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/SubTimesClick.html/" target="_blank">The Times, Trenton</a> | <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/SubJournalClick.html/" target="_blank">The Jersey Journal</a><br><a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/GloucesterClick.html/" target="_blank">Gloucester Co. Times</a> | <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/ExpressClick.html/" target="_blank">The Express-Times</a><br><a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/BridgeClick.html/" target="_blank">Bridgeton News</a> | <a href="http://ads1.advance.net/RealMedia/ads/click_lx.ads/www.nj.com/////ProxyLink/NJONLINE/CLICK_NJ10/SunClick.html/" target="_blank">Today's Sunbeam</a></font></td></tr>
-</tbody></table><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="3"><hr size="1" width="530" noshade=""><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="2"><br><a href="/aboutus/">About Us</a> | <a href="/contactus/">Help/Feedback</a> | <a href="/mediakit/">Advertise With Us</a><br><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/">User Agreement</a>. Please read our <a href="/privacypolicy/">Privacy Policy</a>.<br>© 2005 <a href="/">NJ.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
+</tbody></table><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="3"><hr size="1" width="530" noshade=""><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="2"><br><a href="/aboutus/">About Us</a> | <a href="/contactus/">Help/Feedback</a> | <a href="/mediakit/">Advertise With Us</a><br><img src="http://www.nj.com/images/spacer.gif" width="1" height="1" vspace="1"><br>Use of this site constitutes acceptance of our <a href="/useragreement/">User Agreement</a>. Please read our <a href="/privacypolicy/">Privacy Policy</a>.<br>© 2006 <a href="/">NJ.com</a>. All Rights Reserved.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td width="100"><a href="http://www.advance.net/" target="_blank"><img src="http://www.nj.com/images/footer/advancelogo.gif" width="88" height="31" border="0"></a></td>
 <td width="1" bgcolor="#000000"><img src="http://www.nj.com/images/spacer.gif" width="1" height="1"></td>
@@ -258,39 +272,40 @@ OAS_AD('Tile1');
 </tr>
 </tbody></table>
 </font></p></td></tr>
- <tr>
- 	<td width="428"><img src="/images/spacer.gif" width="428" height="10"></td>
- 	<td width="10"><img src="/images/spacer.gif" width="10" height="10"></td>
- 	<td width="120"><img src="/images/spacer.gif" width="120" height="10"></td>
- 	<td width="10"><img src="/images/spacer.gif" width="10" height="10"></td>
- 	<td width="195"><img src="/images/spacer.gif" width="195" height="10"></td></tr>
- </tbody></table>
- 
-
+<tr>
+<td width="428"><img src="/images/spacer.gif" width="428" height="10"></td>
+<td width="10"><img src="/images/spacer.gif" width="10" height="10"></td>
+<td width="120"><img src="/images/spacer.gif" width="120" height="10"></td>
+<td width="10"><img src="/images/spacer.gif" width="10" height="10"></td>
+<td width="195"><img src="/images/spacer.gif" width="195" height="10"></td></tr>
+</tbody></table>
 <map name="HNAVMAP">
-  <area shape="rect" coords="1,1,52,21" href="/">
-  <area shape="rect" coords="54,1,131,21" href="/news/">
-  <area shape="rect" coords="133,1,181,21" href="/local/">
-  <area shape="rect" coords="183,1,239,21" href="/sports/">
-  <area shape="rect" coords="241,1,305,21" href="/forums/">
-  <area shape="rect" coords="307,1,402,21" href="/live/">
-  <area shape="rect" coords="404,1,458,21" href="/living/">
-  <area shape="rect" coords="460,1,566,21" href="/entertainment/">
-  <area shape="rect" coords="569,1,762,21" href="/classifieds/">
+<area shape="rect" coords="1,1,52,21" href="/">
+<area shape="rect" coords="54,1,131,21" href="/news/">
+<area shape="rect" coords="133,1,181,21" href="/local/">
+<area shape="rect" coords="183,1,239,21" href="/sports/">
+<area shape="rect" coords="241,1,305,21" href="/forums/">
+<area shape="rect" coords="307,1,402,21" href="/live/">
+<area shape="rect" coords="404,1,458,21" href="/living/">
+<area shape="rect" coords="460,1,566,21" href="/entertainment/">
+<area shape="rect" coords="569,1,762,21" href="/classifieds/">
 </map>
-
 <map name="CNAVMAP">
- <area shape="RECT" coords="103,51,193,79" href="/placead/" alt="Place an Ad">
- <area shape="RECT" coords="0,51,102,79" href="/classifieds/" alt="All Classifieds">
- <area shape="RECT" coords="99,0,193,50" href="/realestate/" alt="Real Estate">
- <area shape="RECT" coords="47,0,98,50" href="/autos/" alt="Shop for autos">
- <area shape="RECT" coords="0,0,46,50" href="/jobs/" alt="Jobs">
+<!-- left,top,right,bottom -->
+<area shape="RECT" coords="53,10,88,27" href="/jobs/" alt="Jobs">
+<area shape="RECT" coords="100,10,142,27" href="/autos/" alt="Shop for autos">
+<area shape="RECT" coords="6,33,89,49" href="/realestate/" alt="Real Estate">
+<area shape="RECT" coords="101,33,189,49" href="/placead/" alt="Place an Ad">
+<area shape="RECT" coords="55,58,141,70" href="/classifieds/" alt="All Classifieds">
+<area shape="RECT" coords="62,80,132,96" href="/shopjersey/" alt="Shopping">
+<area shape="RECT" coords="5,104,189,118" href="/shopjersey/" alt="Shop Jersey">
 </map>
 <div id="NAVSPAN" style="position: absolute; top: 146; left: 10; height: 23; width: 763; background-color: #FFFFFF">
 <layer width="763" height="23" bgcolor="#FFFFFF"><img src="http://www.nj.com/dhtml/hnavbar_class/images/hz_nav_img.gif" usemap="#HNAVMAP" height="23" width="763" border="0"></layer></div>
 <div id="CLASSNAVSPAN" style="position: absolute; top: 169; left: 578; height: 81; width: 195; background-color: #FFFFFF" class="menucursor">
-<layer width="195" height="81" bgcolor="#FFFFFF" class="menucursor"><img src="http://www.nj.com/dhtml/hnavbar_class/images/classified_links.gif" ismap="" usemap="#CNAVMAP" height="84" width="195" border="0"></layer></div>
+<layer width="195" height="81" bgcolor="#FFFFFF" class="menucursor"><img src="http://www.nj.com/dhtml/hnavbar_class/images/classified_links.gif" ismap="" usemap="#CNAVMAP" height="125" width="195" border="0"></layer></div>
 <script langauge="javascript" src="http://www.nj.com/dhtml/hnavbar_class/scripts/hPosition.js"></script>
+
 <!--- OAS AD 'Popup' begin -->
 <script language="JavaScript">
 <!--
@@ -301,11 +316,11 @@ OAS_AD('Popup');
 
 
 <!-- Visual Sciences Extra Tracking -->
+<script language="javascript">
+if (_pdata){ sendpdata(); }
+</script>
 <script language="javascript" type="text/javascript"> 
   if ( (document.cookie).indexOf('v1st')>=0 && (document.cookie).indexOf('GTC=')<0 ) {
-    if ( (document.referrer).indexOf(document.domain)<0 ) { 
-        document.write('<img src="http://www.nj.com/cgi-bin/stats/verify.cgi?Log=1&v1st=' + VSgetCookie('v1st') + '" border="0" width="1" height="1">'); 
-    }
-  } 
-</script> <noscript> <img src="http://www.nj.com/cgi-bin/stats/verify.cgi?Log=1&javascript=false" border="0" width="1" height="1"> </noscript> 
+    if ( (document.referrer).indexOf(document.domain)<0 ) { document.write('<img src="http://www.nj.com/cgi-bin/stats/verify.cgi?Log=1&v1st=' + VSgetCookie('v1st') + '" border="0" width="1" height="1">'); }
+} </script> <noscript> <img src="http://www.nj.com/cgi-bin/stats/verify.cgi?Log=1&javascript=false" border="0" width="1" height="1"> </noscript> 
 </body></html>
