--- a/n/nj/njl/njlottery.net.html
+++ b/n/nj/njl/njlottery.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the njlottery.net privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220081933id_/http%3A//njlottery.net/general/4-5_privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the njlottery.net privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615110414id_/http%3A//www.njlottery.net/general/4-5_privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/general_information_template.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <meta http-equiv="Pragma" content="no-cache">
@@ -236,7 +236,7 @@
     Jersey Cash 5 Estimated jackpot based on sales and one winner. <br>
     Please play responsibly. If you or someone you know has a gambling problem, call <a href="http://www.800gambler.org/" target="_blank" style="text-decoration:none; color: #FFFFFF;"><u>1-800-GAMBLER</u></a>©.<br>
     New Jersey Lottery tickets are available only at authorized retailer locations.<br>
-    Copyright©, State of New Jersey, 2005</p>
+    Copyright©, State of New Jersey, 2006</p>
       </td></tr>
 </tbody></table>
 </div>
