--- a/r/re/res/resume-resource.com.html
+++ b/r/re/res/resume-resource.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the resume-resource.com privacy policy that was archived on 2005-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051217141959id_/http%3A//resume-resource.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the resume-resource.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615110511id_/http%3A//www.resume-resource.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
