--- a/f/fo/fos/fossweb.com.html
+++ b/f/fo/fos/fossweb.com.html
@@ -1,9 +1,11 @@
-<!--The following is the downloaded HTML source of the fossweb.com privacy policy that was archived on 2005-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051228145220id_/http%3A//lhsfoss.org/fossweb/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fossweb.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615110920id_/http%3A//lhsfoss.org/fossweb/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><!-- InstanceBegin template="/Templates/fossweb_sb1.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
+
 <title>Fossweb: Privacy Policy</title>
+
 <!-- InstanceEndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 
@@ -107,47 +109,89 @@ function MM_swapImage() { //v3.0
         </tr>
         <tr> 
           <td valign="top" class="bodytext"> <!-- InstanceBeginEditable name="contentText" -->
+
               <p><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="4">P</font><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular">rivacy 
+
                 Policy</font></p>
+
             <p>If you are under 18, be sure to ask your parents for permission 
+
               before you send any information about yourself (your name, address, 
+
               e-mail address, etc.) to us or anyone else over the Internet.</p>
+
             <div align="left"> 
+
                 <p>This site collects no personally identifying information about 
+
                   you except when you knowingly and specifically provide it to 
+
                   us. Your personally identifying information may be used for 
+
                   our editorial, marketing, and/or promotional purposes. We may 
+
                   also provide your personally identifying information to our 
+
                   parent company, subsidiaries, and/or affiliates and/or carefully 
+
                   screened companies whose products and services might be of interest 
+
                   to you.</p>
+
                 <p>The use of "cookies" is common on the Internet. Most 
+
                   browsers are initially set to accept cookies. If you prefer, 
+
                   you can set your browser to refuse cookies or to alert you when 
+
                   cookies are being sent. However, it is possible that some portions 
+
                   of this site will not function properly if you do so. If you 
+
                   do not set your browser to refuse cookies, we may place a cookie 
+
                   in the browser files of your computer. The cookie itself does 
+
                   not give us any personally identifying information, although 
+
                   it will enable us to relate your use of our site to information 
+
                   that you have specifically and knowingly provided to us.</p>
+
               <p>While your personally identifying information is protected as 
+
                 outlined in this policy, we sometimes collect anonymous aggregated 
+
                 data and provide it to our advertisers for statistical purposes. 
+
                 For example, we might tell them that a certain percentage of users 
+
                 live in a certain geographic area.</p>
+
               <p>You should be aware that when you voluntarily disclose personal 
+
                 information (e.g., user name, e-mail address) on bulletin boards 
+
                 or in chat areas, that information can be collected and used by 
+
                 others and may result in unsolicited messages from other Internet 
+
                 users.</p>
+
                 <p>We encourage parents to get involved with their children's on-line 
+
                   usage and to be aware of the activities in which they are participating.</p>
+
               <p>For questions regarding this privacy policy, please contact Delta 
+
                 Education, Attn.: FOSS Product Development, 80 Northwest Boulevard, 
+
                 P.O. Box 3000, Nashua, NH 03061-3000. We can be reached by e-mail 
+
                 at mbacon@delta-edu.com.</p>
+
             </div>
+
             <!-- InstanceEndEditable --></td>
         </tr>
         <tr> 
@@ -163,7 +207,7 @@ function MM_swapImage() { //v3.0
   <tbody><tr> 
     <td height="52"><span class="footer"><a href="faq.html" target="_blank">FAQ</a> 
         | <a href="map.html">Site Map</a> | <a href="search.html">Search</a> 
-        | <a href="../scope/fossstaff/index.html">Questions? Contact FOSS</a> 
+        | <a href="http://www.lhsfoss.org/fossweb/email/mainQuestions.html">Questions? Contact FOSS</a> 
         | <a href="../index.html">lhsfoss.org</a><br>
         <a href="privacy.html">Privacy 
         Policy</a> | <a href="http://www.fossweb.com/modulesK-2/index.html">K-2 
@@ -177,10 +221,10 @@ function MM_swapImage() { //v3.0
 
 <p class="copyright"><a href="http://www.lawrencehallofscience.org">Lawrence Hall of Science</a> 
   | ©  
-			2005 The Regents of the <a href="http://www.berkeley.edu">University 
+			2006 The Regents of the <a href="http://www.berkeley.edu">University 
   of California</a> | last updated 
  
-November 18, 2004
+January 05, 2006
   
 </p>
   <map name="rightNavMap">
