scc-fl.edu (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 1659,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.56,
  "homepage_snapshot_redirected_domain": "scc-fl.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402104722id_/http://www.scc-fl.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402104722id_/http%3A//scc-fl.edu",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "scc-fl.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615111437id_/http%3A//www.scc-fl.edu/internet_privacy_policy.htm",
  "policy_title": "SCC - Internet Privacy Policy",
  "policy_url": "scc-fl.edu/internet_privacy_policy.htm",
  "sha1": "51b8973e05b7d172e499b567db0379453b1e8378",
  "simhash": 12428413797511064829,
  "simhash_updated": false,
  "site_hostname": "scc-fl.edu",
  "site_url": "http://scc-fl.edu",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615111437",
  "word_count": 270,
  "year": 2006
}

--- a/s/sc/scc/scc-fl.edu.html
+++ b/s/sc/scc/scc-fl.edu.html
@@ -1,13 +1,39 @@
-<!--The following is the downloaded HTML source of the scc-fl.edu privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231100639id_/http%3A//www.scc-fl.edu/internet_privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the scc-fl.edu privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615111437id_/http%3A//www.scc-fl.edu/internet_privacy_policy.htm) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>SCC - Internet Privacy Policy</title><meta name="description" content="Internet Privacy Policy for Seminole Community College"><meta name="keywords" content="privacy internet policy scc seminole community college"><meta http-equiv="Content-Style-Type" content="text/css2"> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://vancouver-webpages.com/VWP1.0/&quot; l gen true comment &quot;VWP1.0&quot; by &quot;websupport@scc-fl.edu&quot; on &quot;2002.04.05T11:57-0800&quot; for &quot;http://www.scc-fl.edu&quot; r (MC 0 Gam -1 Com 0 SF 0 Edu -2 S 0 Can 0 V 0 Env 0 P 0 Tol 0 ))"> <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.scc-fl.edu/&quot; r (SS~~000 1))"> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<title>SCC - Internet Privacy Policy</title><meta name="description" content="Internet Privacy Policy for Seminole Community College"><meta name="keywords" content="privacy internet policy scc seminole community college"><meta http-equiv="Content-Style-Type" content="text/css2"> <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://vancouver-webpages.com/VWP1.0/&quot; l gen true comment &quot;VWP1.0&quot; by &quot;websupport@scc-fl.edu&quot; on &quot;2002.04.05T11:57-0800&quot; for &quot;http://www.scc-fl.edu&quot; r (MC 0 Gam -1 Com 0 SF 0 Edu -2 S 0 Can 0 V 0 Env 0 P 0 Tol 0 ))"> <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.scc-fl.edu/&quot; r (SS~~000 1))"> 
 <meta name="MSSmartTagsPreventParsing" content="true"> <meta http-equiv="pics-label" content="(pics-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.scc-fl.edu&quot; r (cz 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.scc-fl.edu&quot; r (n 0 s 0 v 0 l 0))"> 
 <meta http-equiv="imagetoolbar" content="no"> 
 <link rel="shortcut icon" href="http://www.scc-fl.edu/favicon.ico">
-<link rel="stylesheet" href="http://www.scc-fl.edu/css/default.css" type="text/css">
-<link rel="stylesheet" href="http://www.scc-fl.edu/css/print.css" type="text/css" media="print"><style type="text/css" media="screen"> @import "/css/yellow.css"; </style><script type="text/javaScript" src="/media/scripts/photoRotate.js"></script></head><body onload="choosePic()"><table border="0" cellpadding="0" cellspacing="0" width="100%" class="template" summary="Page Layout Table"><caption>Page Layout</caption><tbody><tr><td class="banner"><span class="screen_logo"><a href="/" title="Seminole Community College Homepage"><img src="/media/SCClogo-white.gif" width="421" height="53" alt="Seminole Community College" title="Seminole Community College" style="vertical-align:top;"></a></span><span class="print_logo"><img src="/media/SCClogo-black.gif" alt="Seminole Community College" title="Seminole Community College" style="vertical-align:top;"></span></td><td class="banner"><form id="searchengine" action="http://www2.scc-fl.edu:8765/query.html" method="get"><p id="search"><label for="qt" style="display:none;">Search Term</label><input type="text" size="15" id="qt" name="qt"> <input type="submit" value="Search SCC" class="button"></p></form></td></tr><tr><td id="topnavbar" colspan="2"><a href="https://my.scc-fl.edu/" class="nav" title="MySCC">MySCC</a><a href="http://www2.scc-fl.edu/catalog/" class="nav" title="College Catalog">Catalog</a><a href="/dl/courses/" class="nav" title="Online Classes">Online Classes</a><a href="/online_schedules.htm" class="nav" title="Online Schedules">Course Schedules</a><a href="/catalog/calendar/" class="nav" title="Academic Calendars">Academic Calendars</a></td></tr></tbody></table><table border="0" cellpadding="0" cellspacing="0" width="100%" class="template" summary="Page Layout Table"><caption>Page Layout</caption><tbody><tr><td id="leftside" rowspan="2"><div id="leftsidenav"><img src="/media/spacer.gif" width="170" height="1" alt="-"><br><a href="/" class="verticalmenu">SCC Homepage</a></div><div id="contact"><h5>Contact Info:</h5>
-<p>Seminole Community College<br>100 Weldon Boulevard<br>Sanford, Florida   32773-6199<br>407.708.4722</p></div><div id="leftsidecontent"><em>Did you know?</em><br><br>SCC graduates are guaranteed admission to a public, Florida, four-year university as a junior.</div> </td></tr> <tr> <td id="maincontent"><p id="breadcrumbs"><a href="/" class="horizonalmenu">SCC Homepage</a></p><!-- printopen --><h4 class="boxtitle">Internet Privacy Policy</h4>
+<link rel="stylesheet" href="http://www.scc-fl.edu/css/scc2006.css" type="text/css">
+<link rel="stylesheet" href="http://www.scc-fl.edu/css/print.css" type="text/css" media="print">
+<script type="text/javascript" src="/media/scripts/search_2006.js"></script><script type="text/javascript" src="/media/scripts/2006photoRotate.js"></script>
+</head>
+<body>
+<div id="content">
+<form name="frmSearch" id="frmSearch" action="index.htm" onsubmit="return do_search();"> <table border="0" width="800" cellspacing="0" cellpadding="0" summary="Page header layout table"> <tbody><tr style="border-bottom:1px solid #fff;"> <td rowspan="2" class="teal" style="padding:5px 0px 5px 10px; border-left:1px solid #087e99; border-bottom:1px solid #fff;"> <a href="/" title="SCC Home Page"><img src="/media/images/scc.gif" width="376" height="51" alt="SCC - Seminole Community College" title="SCC - Seminole Community College" id="scclogo"></a></td> <td class="search teal" style="text-align:right; padding:5px 0px 0px 0px;"><input type="text" name="T1" size="20"></td> <td class="search teal" style="padding:7px 0px 0px 0px; vertical-align:top;"> <a href="javascript:do_search();" onmouseover="roll('search','searchOn')" onmouseout="roll('search','searchOff')"><img src="/media/images/search.gif" width="106" height="26" alt="Search SCC" title="Search SCC" name="search" id="search"></a></td></tr><tr>
+<td class="teal" style="padding:0px; vertical-align:top; border-bottom:1px solid #fff; height:30px; text-align:right;" colspan="2">
+<input type="radio" value="V1" checked="checked" name="R1" class="teal">Web site 
+<input type="radio" value="V1" name="R1" class="teal">directory <span style="padding:0px 20px 0px 35px;"><a href="/sitemap.htm" title="SCC Site Map" class="teal">Site map</a></span></td>
+</tr></tbody></table></form><table border="0" width="800" cellspacing="0" cellpadding="0" summary="Page navigation table"> <tbody><tr> <td class="navbutton" style="border-left:1px solid #087e99;"><a href="https://my.scc-fl.edu/" class="navbutton">MySCC</a></td> <td class="navbutton" style="border-left:1px solid #fff;"><a href="/catalog/" class="navbutton">College Catalog</a></td> <td class="navbutton" style="border-left:1px solid #fff;"><a href="/dl/courses/" class="navbutton">Online Classes</a></td> <td class="navbutton" style="border-left:1px solid #fff;"><a href="/online_schedules.htm" class="navbutton">Course Schedules</a></td> <td class="navbutton" style="border-left:1px solid #fff;"><a href="/registrar/calendars/" class="navbutton">Academic Calendar</a></td></tr></tbody></table>
+<table border="0" cellpadding="0" cellspacing="0" width="800" class="template" summary="Page Layout Table">
+<caption>Page Layout</caption>
+<tbody><tr>
+<td id="sidebar">
+<br><a href="/" class="verticalmenu">SCC Homepage</a><p><img src="/media/images/tealdot.gif" width="130" height="1" alt="*" title="*"></p>
+<h5>Contact Info:</h5>
+<p>Seminole Community College<br>100 Weldon Boulevard<br>Sanford, Florida   32773-6199<br>407.708.4722</p><p><br></p>
+<p><em>Did you know?</em><br><br>
+SCC is just minutes from Walt Disney World, Universal Studios, Sea World and many other Central Florida attractions.</p>
+<p><br></p>
+</td>
+<td id="main"><script type="text/javascript">placePic();</script><br>
+<div id="breadcrumbs">
+<a href="/" class="horizonalmenu">SCC Homepage</a></div>
+<div id="pagetext">
+<!-- printopen -->
+<h4 class="boxtitle">Internet Privacy Policy</h4>
 <p>Thank you for visiting scc-fl.edu. Your privacy is very important to
 us. Simply stated, our policy is to collect no personal information
 about you when you visit Seminole Community College, unless you
@@ -40,6 +66,18 @@ required by state or federal law.
 <br>
 If you have other questions about the Seminole Community College
 privacy policies, or have suggestions on how these policies can be
-improved, please feel free to e-mail us at <a href="/websupport.php">WebSupport@scc-fl.edu</a>.</p><!-- printclose --></td><td rowspan="2" id="rightsidecontent"><script type="text/javascript">placePic();</script></td> </tr></tbody></table><table border="0" cellpadding="0" cellspacing="0" width="100%" class="template" summary="Page Layout Table"><caption>Page Layout</caption><tbody><tr><td id="pagefooter"> <br> </td></tr><tr><td class="centersmall"><p>For comments concerning the SCC Web site, use our <a href="http://www.scc-fl.edu/websupport.php" title="Online Support Form for Web Site Questions">online support form</a>.<br>
-SCC is an <a href="http://www.scc-fl.edu/equitystatement.htm" title="SCC Equity Statement">Equal Access/Equal Opportunity College</a><br>
-Copyright © <a href="http://www.scc-fl.edu/" title="SCC - Seminole Community College">Seminole Community College</a>, 1996-2005     <a href="http://www.scc-fl.edu/internet_privacy_policy.htm" title="Privacy Policy">Privacy Policy</a></p></td></tr></tbody></table></body></html>
+improved, please feel free to e-mail us at <a href="/websupport.php">WebSupport@scc-fl.edu</a>.</p>
+<!-- printclose -->
+</div>
+</td>
+</tr>
+</tbody></table>
+<table border="0" cellpadding="0" cellspacing="0" width="800" class="teal" summary="Page Layout Table">
+<caption>Page Layout</caption>
+<tbody><tr>
+<td id="pagefooter"> <br> 
+<p><br></p>
+<p>For comments concerning the SCC Web site, use our <a title="Online Support Form for Web Site Questions" href="http://www.scc-fl.edu/websupport.php" class="teal">online support form</a>.<br>SCC is an <a title="SCC Equity Statement" href="http://www.scc-fl.edu/equitystatement.htm" class="teal">Equal Access/Equal Opportunity College</a><br>Copyright © <a title="SCC - Seminole Community College" href="http://www.scc-fl.edu/" class="teal">Seminole Community College</a>, 1996-2006 <a title="Privacy Policy" href="http://www.scc-fl.edu/internet_privacy_policy.htm" class="teal">Privacy Policy</a></p><p><br></p></td></tr></tbody></table>
+</div>
+
+</body></html>
