--- a/u/ur/urs/ursoftware.com.html
+++ b/u/ur/urs/ursoftware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ursoftware.com privacy policy that was archived on 2005-12-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051215161447id_/http%3A//www.ursoftware.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ursoftware.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615111527id_/http%3A//ursoftware.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/tem.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="doctitle" --> 
@@ -168,7 +168,7 @@ urchinTracker();
         <!-- InstanceEndEditable -->
 			</div>
 		</div>
-      <div id="copyright">Copyright ©1998-2005 URSoft,Inc All rights reserved. <a href="/privacy.htm">Privacy policy</a></div>
+      <div id="copyright">Copyright © 1998-2006 URSoft,Inc All rights reserved. <a href="/privacy.htm">Privacy policy</a></div>
 </div>
 <!-- InstanceBeginEditable name="EditRegion4" --><!-- InstanceEndEditable -->  
 
