--- a/d/di/dig/digitalcamerareview.com.html
+++ b/d/di/dig/digitalcamerareview.com.html
@@ -1,74 +1,20 @@
-<!--The following is the downloaded HTML source of the digitalcamerareview.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219220036id_/http%3A//www.digitalcamerareview.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the digitalcamerareview.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615111601id_/http%3A//www.digitalcamerareview.com/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
-	<title>Digital Camera Reviews For You From DigitalCameraReview.com</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<meta name="description" content="Camera reviews for all the most popular digital cameras are available to you at DigitalCameraReviews.com.  All major manufacturers.">
-	<meta name="keywords" content="camera reviews, digital camera reviews, digital camera comparisons">
-	<link rel="stylesheet" href="/style_digitalcamera.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="/columns_digitalcamera.css" type="text/css" media="screen">
-	<link rel="alternate" type="application/rss+xml" title="DigitalCameraReview.com News Feed" href="http://www.digitalcamerareview.com/rss.xml">
-	<script language="JavaScript">var tcdacmd="dt";</script>
-<script src="http://an.tacoda.net/an/12199/slf.js" language="JavaScript"></script>
-	<script src="/code.js"></script>
-</head>
-
-<body>
-
-<!-- Site Tabs -->
-<div id="sitetabContainer">
-	<a href="http://www.technologyguide.com">TechnologyGuide.com</a>	<a href="http://www.digitalcamerareview.com" class="on">Digital Camera Reviews</a><a href="http://www.notebookreview.com">Notebook Reviews</a><a href="http://www.bargainpda.com">PDA Reviews</a><a href="http://www.spotstop.com">Smart Watch Reviews</a><a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a></div>
-<!-- End Site Tabs -->
-
-<!-- Logo Header and Search -->
-<div id="headerBG">
-	<div id="header">
-		<div id="searchBox">
-			<form method="post" action="/digitalcamera/default.asp" name="search" id="Form1">
-				<input name="hdnSearch" value="search" id="Hidden1" type="hidden">
-				<input name="searchText" size="18" value="" type="text" class="keywordField">
-				<input value="SEARCH" name="btnAction" class="btn" type="submit">
-			</form>
-		</div>
-		<div><a href="/"><img src="/images/logo_digitalcamerareview.gif" alt="camera reviews, digital camera reviews" border="0"></a></div>
-	</div>
-</div>
-<!-- EndLogo Header and Search -->
-<!-- Top Banner -->
-<div id="topBanner">
-	ADVERTISEMENT
-	<div>
-<center>
-<!-- START NETSHELTER 728x90 IFRAME AD CODE v2 FOR DIGITALCAMERAREVIEW.COM -->
-<script language="javascript">
-d=new Date();flash=Math.round(Math.random()*d.getTime());
-chk='E';document.cookie=chk+"="+chk+"; path=/";k=document.cookie.indexOf(chk+"="+chk,0)<0?0:1;cgi='http://servedby.netshelter.net';
-var part1='<iframe src="'+cgi+'/serve.cgi?pid=DIGITALCAMERAREVIEW&g=1&m=9&j=1&k='+k+'&id='+flash+'&d=iframe" ';
-var part2='height=90 width=728 border=0 marginheight=0 scrolling=no marginwidth=0 frameborder=no>';
-var part3='<a href="'+cgi+'/click.cgi?pid=DIGITALCAMERAREVIEW&j=1&k='+k+'&id='+flash+'" target="_blank">';
-var part4='<img src="'+cgi+'/serve.cgi?pid=DIGITALCAMERAREVIEW&g=1&m=9&j=1&k='+k+'&id='+flash+'" width=728 ';
-var part5='height=90 border=0 ALT="Click to Visit"></a></iframe>'
-document.write(part1+part2+part3+part4+part5);
-// -->
-</script><iframe src="http://servedby.netshelter.net/serve.cgi?pid=DIGITALCAMERAREVIEW&amp;g=1&amp;m=9&amp;j=1&amp;k=1&amp;id=961545045406&amp;d=iframe" height="90" width="728" border="0" marginheight="0" scrolling="no" marginwidth="0" frameborder="no"><a href="http://servedby.netshelter.net/click.cgi?pid=DIGITALCAMERAREVIEW&j=1&k=1&id=961545045406" target="_blank"><img src="http://servedby.netshelter.net/serve.cgi?pid=DIGITALCAMERAREVIEW&g=1&m=9&j=1&k=1&id=961545045406" width=728 height=90 border=0 ALT="Click to Visit"></a></iframe>
-<noscript>
-<a href="http://servedby.netshelter.net/click.cgi?pid=DIGITALCAMERAREVIEW&id=682402" target="_blank"><img src="http://servedby.netshelter.net/serve.cgi?pid=DIGITALCAMERAREVIEW&g=1&m=9&id=682402" width=728 height=90 border=0 ALT="Click to Visit"></a>
-</noscript>
-<!-- END NETSHELTER 728x90 IFRAME AD CODE v2 FOR DIGITALCAMERAREVIEW.COM -->
-</center>
-	</div>
-</div>
-<!-- End Top Banner --><!-- Main Navigation -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><title>Digital Camera Reviews For You From DigitalCameraReview.com</title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="description" content="Camera" reviews="" for="" all="" the="" most="" popular="" digital="" cameras="" are="" available="" to="" you="" at="" digitalcamerareviews.com.="" major="" manufacturers."=""><meta name="keywords" content="camera reviews, digital camera reviews, digital camera comparisons"><link rel="stylesheet" href="/style.css" type="text/css" media="screen"><link rel="alternate" type="application/rss+xml" title="DigitalCameraReview.com News Feed" href="/rss.xml"><script src="/code.js"></script><script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/dlv/aslmain.js"></script><link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"></head><body><div id="sitetabContainer"><a href="http://www.digitalcamerareview.com" class="on">Digital Camera Reviews</a><a href="http://www.notebookreview.com" class="">Notebook Reviews</a><a href="http://www.Brighthand.com" class="">PDA Reviews</a><a href="http://www.spotstop.com" class="">Smart Watch Reviews</a><a href="http://www.tabletpcreviewspot.com" class="">Tablet PC Reviews</a></div><!-- Logo Header and Search --><div id="headerBG"><div id="header"><div id="searchBox"><form method="get" action="http://www.google.com/custom" target="_top"><input type="text" name="q" size="31" maxlength="255" value="" style="width:195px;"><input type="hidden" name="sa" value="Google Search"><input type="hidden" name="domains" value="DigitalCameraReview.com"><input type="hidden" name="client" value="pub-5771476875610059"><input type="hidden" name="sitesearch" value="DigitalCameraReview.com"><input type="hidden" name="forid" value="1"><input type="hidden" name="ie" value="ISO-8859-1"><input type="hidden" name="oe" value="ISO-8859-1"><input type="hidden" name="flav" value="0000"><input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#336699;VLC:663399;AH:center;BGC:FFFFFF;LBGC:c00c00;ALC:0000FF;LC:0000FF;T:000000;GFNT:0000FF;GIMP:0000FF;LH:27;LW:150;L:http://www.DigitalCameraReview.com/images/digitalcamera_small.jpg;S:http://www.DigitalCameraReview.com;FORID:1;"><input type="hidden" name="hl" value="en"> <input type="submit" value="SEARCH" name="btnAction" class="btn"></form></div><div><a href="/"><img src="/images/logo_digitalcamerareview.gif" alt="Digital Camera Reviews" title="Welcome to DigitalCameraReview.com" border="0" height="50" width="302"></a></div></div></div><div id="topBanner"><div><center>
+<script language="javascript" type="text/javascript">Ads_kid=0;Ads_bid=0;Ads_xl=728;Ads_yl=90;Ads_wrd='[KeyWord]';</script><script type="text/javascript" language="javascript" src="http://a.as-us.falkag.net/dat/cjf/00/13/59/42.js"></script>
+</center></div></div><!-- Main Navigation -->
 <div id="mainNavBG">
+<table align="center" cellpadding="0" cellspacing="0" border="0" width="800"><tbody><tr><td>
 <div id="mainNav">
-<a href="/" class="on">HOME</a><a href="/digitalcamera/">Camera Database</a><a href="/reviews/">Camera Reviews</a><a href="http://forum.digitalcamerareview.com">Forums</a><a href="/memoryCards/">Memory Cards</a><a href="/clearance/">Clearance</a><a href="/dellCoupons.asp">Dell Coupons</a><a href="/compare_digital_cameras.asp">Camera Comparison</a>
+<a href="/" class="on">HOME</a><a href="/digitalcamera/">Camera Database</a><a href="/reviews/">Camera Reviews</a><a href="http://forum.digitalcamerareview.com">Forums</a><a href="/deals/"><font color="green" size="2">$ Camera Deals</font></a><a href="/compare_digital_cameras.asp">Camera Comparison</a>
 </div>
+</td></tr></tbody></table>
 </div>
 <!-- End Main Navigation -->
 <!-- Main Body Content -->
 <div id="bodyWrapper">
-	
+
 <!-- Center Column -->
 <div id="centerColNosides">
 	<div id="contentFunctions">
@@ -128,30 +74,26 @@ the use and satisfaction of this site.
 	</div>
 	<!-- End Center Column -->
 	
-	<div class="clear"></div>
-	
+<div class="clear"></div>
 </div>
 <!-- End Main Body Content -->
 
 <!-- Footer -->
-
 <!-- Footer -->
-<div id="footer">
-	<a href="http://www.digitalcamerareview.com">Digital Camera Reviews</a>&nbsp;|
-	<a href="http://www.notebookreview.com">Notebook Reviews</a>&nbsp;|
-	<a href="http://www.bargainpda.com">PDA Reviews</a>&nbsp;|
-	<a href="http://www.spotstop.com">Smart Watch Reviews</a>&nbsp;|
-	<a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a><br><br>
-	<a href="/advertise/">Advertising</a>&nbsp;|
-	<a href="/sitemap/">DigitalCameraReview.com Sitemap</a>&nbsp;|
-	<a href="/contact/">Contact Us</a>&nbsp;|
-	<a href="/submitReview/">Submit Review</a>&nbsp;|
-	<a href="/privacy/">Privacy Policy</a>
-	<br><br>
-	© DigitalCameraReview.com 2005
-</div>
+<div id="footer"><a href="http://www.digitalcamerareview.com">Digital Camera Reviews</a> | <a href="http://www.notebookreview.com">Notebook Reviews</a> | <a href="http://www.brighthand.com">PDA Reviews</a> | <a href="http://www.spotstop.com">Smart Watch Reviews</a> | <a href="http://www.tabletpcreviewspot.com">Tablet PC Reviews</a><br><br>
+<a href="/advertise/">Advertising</a> | <a href="/sitemap/">DigitalCameraReview.com Sitemap</a> | <a href="/contact/">Contact Us</a> | <a href="/submitReview/">Submit Review</a> | <a href="/privacy/">Privacy Policy</a>
 
+<br><br>© DigitalCameraReview.com 2006</div>
 
+<!-- google analytics -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-283204-2";
+_udn="digitalcamerareview.com";
+urchinTracker();
+</script>
+<!-- end google analytics -->
 <!-- End Footer -->
 <!-- End Footer -->
 
