--- a/5/52/528/5280.com.html
+++ b/5/52/528/5280.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 5280.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229005019id_/http%3A//www.5280.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 5280.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615112014id_/http%3A//www.5280.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>5280.com - Privacy Policy</title>
@@ -16,7 +16,7 @@
 
 	<div id="head_section">
 		
-		<a href="http://www.5280.com/adserver/adclick.php?bannerid=2&amp;zoneid=1&amp;source=&amp;dest=http%3A%2F%2Fwww.pueblobonito.com%2F" target="_blank" onmouseover="self.status='Pueblo Bonito'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=728x90-new2.gif&amp;contenttype=gif" width="728" height="90" alt="Pueblo Bonito Hotels" title="Pueblo Bonito Hotels" border="0"></a><div id="beacon_2" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=2&amp;clientid=4&amp;zoneid=1&amp;source=&amp;block=0&amp;capping=0&amp;cb=d2228ea0d07f9536e5e0a33d34014bdf" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>		
+		<a href="http://www.5280.com/adserver/adclick.php?bannerid=41&amp;zoneid=1&amp;source=&amp;dest=http%3A%2F%2Fwww.sauzatequila.com" target="_blank"><img src="http://www.5280.com/adserver/adimage.php?filename=sauza_ad_1105.gif&amp;contenttype=gif" width="728" height="90" alt="Sauza" title="Sauza" border="0"></a><div id="beacon_41" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=41&amp;clientid=45&amp;zoneid=1&amp;source=&amp;block=0&amp;capping=0&amp;cb=3307f5eca0b06b07422579f54a4fb550" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>		
 	</div>
 		
 	<div id="subhead_section">
@@ -41,9 +41,8 @@
 </ul></li>
 <li id="liMagazine" class="off"><a href="http://www.5280.com/magazine.php"><span>Magazine</span></a>
 <ul>
-  <li><a href="http://www.5280.com/issues/2005/0512/index.php">Current Issue</a>&nbsp;&nbsp;&nbsp;</li>
+  <li><a href="http://www.5280.com/issues/2006/0606/index.php">Current Issue</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/back_issues.php">Back Issues</a>&nbsp;&nbsp;&nbsp;</li>
-  <li><a href="http://dmh.magserv.com/scc.php">Subscriber Care</a>&nbsp;&nbsp;&nbsp;</li>
 </ul></li>
 <li id="liRestaurants" class="off"><a href="http://www.5280.com/restaurants.php"><span>Restaurants</span></a>
 <ul>
@@ -59,11 +58,11 @@
 </ul></li>
 <li id="liGet5280" class="off"><a href="http://www.5280.com/get5280.php"><span>Get 5280</span></a>
 <ul>
-  <li id="start_get"><a href="http://dmh.magserv.com">Subscribe</a>&nbsp;&nbsp;&nbsp;</li>
+  <li id="start_get"><a href="https://w1.buysub.com/servlet/OrdersGateway?cds_mag_code=DNV">Subscribe</a>&nbsp;&nbsp;&nbsp;</li>
+  <li><a href="https://w1.buysub.com/servlet/OrdersGateway?cds_mag_code=DNV&amp;cds_page_id=29550">Gift Subscriptions</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/about_vendors.php">Newsstand</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/back_issues.php">Back Issues</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/get_emailnews.php#subscribe">Email Newsletters</a>&nbsp;&nbsp;&nbsp;</li>
-  <li><a href="http://dmh.magserv.com/scc.php">Subscriber Care</a>&nbsp;&nbsp;&nbsp;</li>
 </ul></li>
 <li id="liAdvertising" class="off"><a href="http://www.5280.com/ad.php"><span>Advertising</span></a>
 <ul>
@@ -77,6 +76,7 @@
 	<li id="start_market"><a href="http://www.5280.com/5280_2005/logo_shirt.php">5280 Gear</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/market_beauty.php">Beauty Buzz</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/destination_boulder.php">Destination Boulder</a>&nbsp;&nbsp;&nbsp;</li>
+  <li><a href="http://www.5280.com/2006/chef_profile.php">Chef's Profile</a>&nbsp;&nbsp;&nbsp;</li>
   <li><a href="http://www.5280.com/wireless_hotspots.php">Wireless Hotspots</a></li>
 </ul></li>
 <li id="liAbout5280" class="off"><a href="http://www.5280.com/about.php"><span>About 5280</span></a>
@@ -101,22 +101,21 @@
 		<div id="left_home_column">
 		
 			
-		<a href="http://www.5280.com/issues/2005/0512/index.php"><img src="http://www.5280.com/issues/2005/0512/images/cover_small.jpg" width="156" height="207" border="0"></a>
-		<p id="blue_header">EMAIL NEWS</p>
-		<div class="formframe_short">Receive 5280 news via email including our popular Best Bets and Table Talk newsletters.<br>
-		<a href="http://www.5280.com/get_emailnews.php#subscribe">Signup today</a>.</div>
+		<a href="http://www.5280.com/issues/2006/0606/index.php"><img src="http://www.5280.com/issues/2006/0606/images/cover_small.jpg" width="156" height="207" border="0"></a>
+
+		
 		<p id="blue_header">QUICK LINKS</p>
-		<p><strong>Join Us!</strong><br>We're looking for a <em>Senior Editor</em>. Get the scoop on our <a href="http://www.5280.com/5280_opportunities.php">Jobs page</a>.</p>
-		<p><strong>5280 and local bloggers</strong> uncover plagiarism and evasion at the <em>Rocky Mountain News</em>. Our original report is <a href="http://www.5280.com/blog/?p=1066">here</a> and an update from the September issue is <a href="http://www.5280.com/issues/2005/0509/feature.php?pageID=136">here</a>.</p>
-		<p><strong>This year's Leadville 100</strong> has come and gone. Read the story behind . Get the <a href="http://www.5280.com/issues/2005/0506/feature.php?pageID=24">Colorado's Most Amazing and Punishing (and Magical) Race.</a></p>
+		<p><strong>Looking for Denver's latest restaurant news?</strong> The latest happenings around town? How about great deals that are only available to readers of 5280.com? Sign up today for our great <a href="http://www.5280.com/get_emailnews.php#subscribe">5280 email newsletters</a> and you'll be in the know.</p>
+		<p><strong>We're hiring!</strong> Join 5280 in the newly created position of Web Editor. Details on the position and how to apply are <a href="http://www.5280.com/5280_opportunities.php">here</a>.</p>
+		<p><strong>Tell us about it.</strong> Give us your <a href="http://www.5280.com/dining_feedback.php">restaurant feedback</a> or <a href="http://www.5280.com/event_submission.php">submit your event</a> for our online and printed calendar.</p>
 		<p id="blue_header">SPECIAL REPORTS</p>
 		<p><strong>Many of 5280's</strong> most popular special reports — including Top Doctors, Denver Childcare, and more — are now available for purchase and download <a href="http://store.yahoo.com/5280magazine/dido.html">here</a>. (<a href="http://www.adobe.com/products/acrobat/readstep2.html">Adobe Acrobat</a> required.)</p>
 		<p id="blue_header">LOCAL SOUNDS</p>
 		<p>This month sample:<br>
-		<strong>MEESE</strong></p>
-		<img src="http://www.5280.com/5280_2005/images/sounds_meese.jpg" alt="MEESE -- After I am Gone mp3" width="104" height="90" border="0"><br>
-			Track: After I am Gone<br>
-			<a href="http://www.5280.com/mp3/after_i_am_gone.mp3">Download mp3</a>			
+		<strong>DKO</strong></p>
+		<img src="http://www.5280.com/2006/images/dko_cover.jpg" alt="DKO" width="104" height="104" border="0"><br>
+			Track: In The Now Part II<br>
+			<a href="http://www.5280.com/2006/mp3/in_the_now_part_2.mp3">Download mp3</a>			
 		</div>
 		
 		</td>
@@ -236,14 +235,12 @@
 		<td align="center" valign="top" width="152">
 		<div id="right_ad_column">
 		
-			<a href="http://www.5280.com/tot/"><img src="http://www.5280.com/5280_2005/images/tot_vote_here.gif" border="0"></a>
-<p id="blue_header">SUBSCRIBE</p>
-
-<p><a class="holiday" href="http://www.5280.com/holidayoffer/"><img src="http://www.5280.com/5280_2005/images/sub_offer_holidays.jpg" alt="Holiday Subscription Gift Offer" border="0"></a></p>
+			<a href="https://w1.buysub.com/servlet/OrdersGateway?cds_mag_code=DNV"><img src="http://www.5280.com/2006/images/subscribe_generic_5280.gif" border="0"></a>
 
 <p id="blue_header">ADVERTISING</p>
 
-<p><a href="http://www.5280.com/adserver/adclick.php?bannerid=13&amp;zoneid=5&amp;source=&amp;dest=http%3A%2F%2Fcoloradoheadwaters.com%2F" target="_blank" onmouseover="self.status='Chaffee County 2'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=5280-lifestyle.gif&amp;contenttype=gif" width="120" height="90" alt="Chaffee County 2" title="Chaffee County 2" border="0"></a></p><div id="beacon_13" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=13&amp;clientid=22&amp;zoneid=5&amp;source=&amp;block=0&amp;capping=0&amp;cb=39a8d3dee44390c6a397ca384e8fab07" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p><p></p><p><a href="http://www.5280.com/adserver/adclick.php?bannerid=4&amp;zoneid=2&amp;source=&amp;dest=http%3A%2F%2Fwww.luxesalon.com%2F" target="_blank" onmouseover="self.status='Luxe Salon Denver'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=luxe_240.jpg&amp;contenttype=jpeg" width="120" height="240" alt="Luxe Salon Denver" title="Luxe Salon Denver" border="0"></a></p><div id="beacon_4" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=4&amp;clientid=8&amp;zoneid=2&amp;source=&amp;block=0&amp;capping=0&amp;cb=9098ff4444715243d2196b79edc4949d" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p><p></p>
+<p><a href="http://www.5280.com/adserver/adclick.php?bannerid=57&amp;zoneid=5&amp;source=&amp;dest=http%3A%2F%2Fwww.rmpbs.org" target="_blank"><img src="http://www.5280.com/adserver/adimage.php?filename=pbs.gif&amp;contenttype=gif" width="120" height="90" alt="Rocky Mountain PBS" title="Rocky Mountain PBS" border="0"></a></p><div id="beacon_57" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=57&amp;clientid=59&amp;zoneid=5&amp;source=&amp;block=0&amp;capping=0&amp;cb=d6dbe6d6fadc826e1dc4e38006f69f00" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p><p><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="120" height="60"><param name="movie" value="http://www.5280.com/adserver/adimage.php?filename=pdsa_5280_flash_v5_2.swf&amp;contenttype=swf&amp;alink1=http://www.5280.com/adserver/adclick.php%3Fbannerid=59%26zoneid=6%26source=%26dest=http%3A%2F%2Fwww.denverplasticsurgery.com&amp;atar1=_blank"><param name="quality" value="high"><embed src="http://www.5280.com/adserver/adimage.php?filename=pdsa_5280_flash_v5_2.swf&amp;contenttype=swf&amp;alink1=http://www.5280.com/adserver/adclick.php%3Fbannerid=59%26zoneid=6%26source=%26dest=http%3A%2F%2Fwww.denverplasticsurgery.com&amp;atar1=_blank" quality="high" width="120" height="60" type="application/x-shockwave-flash" pluginspace="http://www.macromedia.com/go/getflashplayer"></object></p><div id="beacon_59" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=59&amp;clientid=63&amp;zoneid=6&amp;source=&amp;block=0&amp;capping=0&amp;cb=e14b2106b7fab386743b1b6a70a5c5d4" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p><a target="_blank" href="http://www.5280.com/adserver/adclick.php?bannerid=47&amp;zoneid=22&amp;source=&amp;dest=http%3A%2F%2Fwww.cohomefinder.com%2FDenver-real-estate-and-homes.htm&amp;ismap=">Denver Real Estate</a><br>Search&nbsp;Denver homes&nbsp;&amp; real estate listings at Colorado HomeFinder.
+<a target="_blank" href="http://www.5280.com/adserver/adclick.php?bannerid=47&amp;zoneid=22&amp;source=&amp;dest=http%3A%2F%2Fwww.cohomefinder.com%2FDenver-real-estate-and-homes.htm&amp;ismap=">COhomefinder.com</a><div id="beacon_47" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=47&amp;clientid=48&amp;zoneid=22&amp;source=&amp;block=0&amp;capping=0&amp;cb=f1bc7398bd104166dfce856262960c14" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p><a href="http://www.5280.com/adserver/adclick.php?bannerid=4&amp;zoneid=2&amp;source=&amp;dest=http%3A%2F%2Fwww.luxesalon.com%2F" target="_blank" onmouseover="self.status='Luxe Salon Denver'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=luxe_240.jpg&amp;contenttype=jpeg" width="120" height="240" alt="Luxe Salon Denver" title="Luxe Salon Denver" border="0"></a></p><div id="beacon_4" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=4&amp;clientid=8&amp;zoneid=2&amp;source=&amp;block=0&amp;capping=0&amp;cb=37a2407d866ee07c9b3deed3d8e7e0f4" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p><p></p><p><a href="http://www.5280.com/2006/chef_profile.php"><img src="http://www.5280.com/2006/images/chef_profile/ad_button.jpg" border="0"></a></p>
 <!-- GOOGLE ADSENSE -->
 
 <script type="text/javascript"><!--
@@ -260,12 +257,12 @@ google_color_text = "333333";
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
 
-<p><img src="http://www.5280.com/adserver/adimage.php?filename=get5280_2.gif&amp;contenttype=gif" width="120" height="90" alt="Want 5280 in your store?" title="Want 5280 in your store?" border="0" onmouseover="self.status='Want 5280 in your store?'; return true;" onmouseout="self.status='';return true;"></p><div id="beacon_34" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=34&amp;clientid=39&amp;zoneid=12&amp;source=&amp;block=0&amp;capping=0&amp;cb=254f54aa0d9d80e13fd7789cc8a1f694" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p>
+<p><img src="http://www.5280.com/adserver/adimage.php?filename=get5280_2.gif&amp;contenttype=gif" width="120" height="90" alt="Want 5280 in your store?" title="Want 5280 in your store?" border="0" onmouseover="self.status='Want 5280 in your store?'; return true;" onmouseout="self.status='';return true;"></p><div id="beacon_34" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=34&amp;clientid=39&amp;zoneid=12&amp;source=&amp;block=0&amp;capping=0&amp;cb=459338136c39d469d5493e6206eb2091" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div><p></p>
 <!-- SUPPORT AND SPONSORSHIP -->
 
 		<p id="blue_header">WE SUPPORT</p>
 
-<a href="http://www.5280.com/adserver/adclick.php?bannerid=5&amp;zoneid=3&amp;source=&amp;dest=http%3A%2F%2Fwww.projectangelheart.org%2F" target="_blank" onmouseover="self.status='Project Angel Heart'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=angel_heart_120x90.jpg&amp;contenttype=jpeg" width="120" height="90" alt="Project Angel Heart" title="Project Angel Heart" border="0"></a><div id="beacon_5" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=5&amp;clientid=10&amp;zoneid=3&amp;source=&amp;block=0&amp;capping=0&amp;cb=05de18550a0e5281a3984ae36268c5a8" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
+<a href="http://www.5280.com/adserver/adclick.php?bannerid=5&amp;zoneid=3&amp;source=&amp;dest=http%3A%2F%2Fwww.projectangelheart.org%2F" target="_blank" onmouseover="self.status='Project Angel Heart'; return true;" onmouseout="self.status='';return true;"><img src="http://www.5280.com/adserver/adimage.php?filename=angel_heart_120x90.jpg&amp;contenttype=jpeg" width="120" height="90" alt="Project Angel Heart" title="Project Angel Heart" border="0"></a><div id="beacon_5" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.5280.com/adserver/adlog.php?bannerid=5&amp;clientid=10&amp;zoneid=3&amp;source=&amp;block=0&amp;capping=0&amp;cb=f98d77a837b003a0694aa15ab0f88bbc" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
 
 		
 		</div>
