--- a/e/en/eng/englishlearner.com.html
+++ b/e/en/eng/englishlearner.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the englishlearner.com privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220034859id_/http%3A//www.englishlearner.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the englishlearner.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615112417id_/http%3A//englishlearner.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Statement for EnglishLearner.com</title>
