nait.ca (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 3833,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.24,
  "homepage_snapshot_redirected_domain": "nait.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060411142950id_/http://www.nait.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060411142950id_/http%3A//nait.ca",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "nait.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615113620id_/http%3A//www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http%3B/www/pthosted/naithelp/privacypolicy.htm",
  "policy_title": "NAIT Privacy Policy",
  "policy_url": "nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/privacypolicy.htm",
  "sha1": "7e1b0b4ac680f5673b6bfd8f95411f9366ca63dc",
  "simhash": 10417531553403913397,
  "simhash_updated": false,
  "site_hostname": "nait.ca",
  "site_url": "http://nait.ca",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615113620",
  "word_count": 608,
  "year": 2006
}

--- a/n/na/nai/nait.ca.html
+++ b/n/na/nai/nait.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nait.ca privacy policy that was archived on 2005-12-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051220074725id_/http%3A//www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http%3B/www/pthosted/naithelp/privacypolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nait.ca privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615113620id_/http%3A//www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http%3B/www/pthosted/naithelp/privacypolicy.htm) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><link type="text/css" href="https://www.nait.ca/imageserver/plumtree/common/public/css/mainstyle-en.css" rel="StyleSheet" lang="en"><script type="text/javascript">if (document.cookie.indexOf('Set-Font-Large=true')>=0){document.write('<link type="text/css" href="https://www.nait.ca/imageserver/plumtree/common/public/css/mainstyle-en-large.css" rel="StyleSheet" lang="en"></link>');};</script><title>NAIT Privacy Policy</title><script type="text/javascript" src="https://www.nait.ca/imageserver/plumtree/common/private/js/jsportlet/146642/PTPortletServices.js"></script>
 <script type="text/javascript">var g_PTImgSvrImgsURL = "https://www.nait.ca/imageserver/plumtree/portal/private/img/";
@@ -275,7 +275,7 @@ NAIT_preloadImages(ImgSrvrURL + 'mynait_buttonroll.gif',ImgSrvrURL + 'login_butt
 <meta http-equiv="imagetoolbar" content="no">
 <meta name="author" content="RM">
 <meta name="MSSmartTagsPreventParsing" content="true">
-<meta name="copyright" content="Copyright © 2005 NAIT, All Rights Reserved">
+<meta name="copyright" content="Copyright © 2006 NAIT, All Rights Reserved">
 <meta name="revisit-after" content="5 Days">
 <meta name="description" content="The Northern Alberta Institute of Technology (" nait")="" is="" committed="" to="" ensuring="" the="" personal="" privacy="" of="" faculty,="" staff,="" students="" and="" customers="" visiting="" our="" website.="" following="" information="" discloses="" practices="" for="" collecting="" data,="" including="" what="" type="" gathered="" tracked,="" why="" this="" being="" collected,="" how="" used."=""> 
 <meta name="keywords" content="nait, Nait, privacy, policy, privacy policy, nait privacy policy, terms, 
@@ -383,9 +383,9 @@ function _400_MakeAbsoluteURL(strURL) {
 	if (-1 != strURLBase.indexOf(':')) return strURL;
 	if ('#' == strURL.substring(0, 1)) return strURL;
 	if ('/' == strURL.substring(0, 1)) {
-		return 'http://contentsrv:8080' + strURL; }
+		return 'http://contentsrv:8181' + strURL; }
 	var strTempURL = strURL;
-	var strTempBaseURL = 'http://contentsrv:8080/publishedcontent/publish/nait_footer';
+	var strTempBaseURL = 'http://contentsrv:8181/publishedcontent/publish/_communities/nait_footer';
 	while ('../' == strTempURL.substring(0, 3)) {
 		strTempURL = strTempURL.substring(3);
 		var lLastSlashLoc = strTempBaseURL.lastIndexOf('/');
@@ -421,7 +421,7 @@ function _400_FixURLForPlumtree(strURL) {
 			<td height="18"><div class="NavButton"><a href="http://www.nait.ca/portal/server.pt?space=CommunityPage&amp;cached=true&amp;parentname=CommunityPage&amp;parentid=0&amp;in_hi_userid=88046&amp;control=SetCommunity&amp;CommunityID=326&amp;PageID=0" title="NAIT Main Campus Map"><img src="https://www.nait.ca/imageserver/plumtree/portal/public/img/sp.gif" width="1" height="18" border="0" align="absmiddle">&nbsp;Campus Maps&nbsp;</a></div></td>
 
 			<td width="12" height="18" align="center"><img src="https://www.nait.ca/imageserver/plumtree/portal/templates/nait_common_footer/separator.gif" width="5" height="18" border="0"></td>
-			<td><div class="NavButton"><a href="http://www.nait.ca/hr/jobopp/currentposting.htm" title="Looking for a Job at NAIT?"><img src="https://www.nait.ca/imageserver/plumtree/portal/public/img/sp.gif" width="1" height="18" border="0" align="absmiddle">&nbsp;Jobs at NAIT&nbsp;</a></div></td>
+			<td><div class="NavButton"><a href="http://www.nait.ca/jobsatnait" title="Looking for a Job at NAIT?"><img src="https://www.nait.ca/imageserver/plumtree/portal/public/img/sp.gif" width="1" height="18" border="0" align="absmiddle">&nbsp;Jobs at NAIT&nbsp;</a></div></td>
 			
 			<td width="12" height="18" align="center"><img src="https://www.nait.ca/imageserver/plumtree/portal/templates/nait_common_footer/separator.gif" width="5" height="18" border="0"></td>
 			<td><div class="NavButton"><a href="http://www.nait.ca/contacts/default.htm" title="Complete NAIT Contact List"><img src="https://www.nait.ca/imageserver/plumtree/portal/public/img/sp.gif" width="1" height="18" border="0" id="large" align="absmiddle">&nbsp;Contact List&nbsp;</a></div></td>
@@ -478,8 +478,8 @@ function _400_FixURLForPlumtree(strURL) {
 			(780) 471-7400</span></td>
 		<td align="right" valign="top class=" navtext"="">
 
-			<span class="NavText">&nbsp;<a href="http://www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/copyright.htm">Copyright © NAIT 2005</a> <br>
-							<a href="http://www.nait.ca/help">Site Feedback</a> | <a href="http://www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/privacypolicy.htm" title="Privacy Policy">
+			<span class="NavText">&nbsp;<a href="http://www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/copyright.htm">Copyright © NAIT 2006</a> <br>
+							<a href="mailto:thewebmaster@nait.ca?subject=NAIT Website Feedback">Site Feedback</a> | <a href="http://www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/privacypolicy.htm" title="Privacy Policy">
 								Privacy Policy</a> | <a href="http://www.nait.ca/portal/server.pt/gateway/PTARGS_0_0_241_0_0_43/http;/www/pthosted/naithelp/termsofuse.htm" title="Terms of Use">Terms of Use</a>
 			</span></td>
 		<td style="width:10px"></td>
